code25_all/scala/11379975.txt
type IntSeq = Seq[Int]

apply
scala> IntSeq(1, 2, 3)
<console>:8: error: not found: value IntSeq
              IntSeq(1, 2, 3)
              ^

Seq[Int]
val IntSeq = Seq
